--- a/views/500.html
+++ b/views/500.html
@@ -3,13 +3,12 @@
 
 <head>
   <title>{{.Title}}</title>
-  <link href="/css/style.css">
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
   <p>{{.Message}}</p>
-
-  <script src="/js/app.js"></script>
 </body>
 
 </html>
