--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <title>{{.Title}}</title>
-  <link href="/css/style.css">
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
