--- a/views/404.html
+++ b/views/404.html
@@ -4,11 +4,17 @@
 <head>
   <title>{{.Title}}</title>
   <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <link rel="icon" href="/img/fiber_v2_logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-  <p>{{.Message}}</p>
+  <div class="container">
+    <img id= "logo" src="/img/fiber_v2_logo.svg">
+    <h1 class="heading">404 Not Found</h1>
+    <p>{{.Message}}</p>
+    <a href="/">Back to Home</a>
+  </div>
 </body>
 
 </html>
